--- a/style.css
+++ b/style.css
@@ -50,6 +50,12 @@ ul {
   padding: 0;
 }
 
+.banner-text {
+  color: brown;
+  font-family: cursive;
+  font-weight: normal;
+}
+
 h2 {
   font-size: 40px;
   font-family: 'Poiret One, Arial';
@@ -75,14 +81,6 @@ footer {
   display: flex;
   justify-content: center;
   background-color: rgb(210, 105, 30)
-}
-
-.icon {
-  display: flex;
-  margin-bottom: 20px;
-  margin-top: 20px;
-  justify-content: center;
-  align-items: center;
 }
 
 .content {
@@ -117,5 +115,10 @@ img {
 
 p {
   text-align: center;
-  font-size: large;
+  font-size: normal;
 }
+
+.icon {
+  display: flex;
+  margin: 20px 0 20px 0;
+}  
